--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -10,6 +10,28 @@
 		android:orientation="horizontal"
 		android:weightSum="1">
 
+		<TextView
+			android:id="@+id/service_registered_info"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:textSize="14sp"
+			/>
+
+		<Button
+			android:id="@+id/button_register"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/button_register"/>
+	</LinearLayout>
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		android:weightSum="1">
+
 		<EditText
 			android:id="@+id/et_type"
 			android:layout_width="0dp"
